# revisor

./: Makefile  README.md  revisor-2.2-comps.fix.patch  revisor-2.2-revisor.conf.sl.patch  revisor-comps-override.patch  revisor-final.patch  revisor-product_img.patch  revisor-rhel6.patch  revisor-sl6-i386.conf  revisor-sl6-x86_64.conf  revisor.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  revisor.py  revisor.spec  revisor.spec.in
src/conf/: Makefile.am  Makefile.in  comps-el5.xml  comps-f10.xml  comps-f11.xml  comps-f12.xml  comps-f13.xml  comps-f7.xml  comps-f8.xml  comps-f9.xml  comps-fe6.xml  revisor.conf  revisor.console  revisor.desktop.in
src/conf/conf.d/: fedora-11-gold.cfg  fedora-7-gold.cfg  fedora-8-gold.cfg  revisor-c5-i386.conf  revisor-c5-ppc.conf  revisor-c5-x86_64.conf  revisor-f10-i386.conf  revisor-f10-ppc.conf  revisor-f10-ppc64.conf  revisor-f10-x86_64.conf  revisor-f11-i386.conf  revisor-f11-ppc.conf  revisor-f11-ppc64.conf  revisor-f11-x86_64.conf  revisor-f12-i386.conf  revisor-f12-ppc.conf  revisor-f12-ppc64.conf  revisor-f12-x86_64.conf  revisor-f13-i386.conf  revisor-f13-x86_64.conf  revisor-f7-i386.conf  revisor-f7-ppc.conf  revisor-f7-x86_64.conf  revisor-f8-i386.conf  revisor-f8-ppc.conf  revisor-f8-ppc64.conf  revisor-f8-x86_64.conf  revisor-f9-i386.conf  revisor-f9-ppc.conf  revisor-f9-ppc64.conf  revisor-f9-x86_64.conf  revisor-fc6-i386.conf  revisor-fc6-ppc.conf  revisor-fc6-x86_64.conf  revisor-rawhide-i386.conf  revisor-rawhide-ppc.conf  revisor-rawhide-ppc64.conf  revisor-rawhide-x86_64.conf
src/doc/: Makefile.am  Makefile.in  revisor.8  revisor.conf.5
src/po/: ChangeLog  POTFILES.in  ca.po  de.po  el.po  es.po  fr.po  hu.po  it.po  ms.po  nl.po  pl.po  pt_BR.po  sr.po  sr@latin.po  uk.po  zh_CN.po
src/revisor/: Makefile.am  Makefile.in  __init__.py  __init__.py.in  base.py  cfg.py  cli.py  constants.py  errors.py  image.py  kickstart.py  logger.py  misc.py  pkgorder.py  plugins.py  progress.py  pungi.py  splittree.py  translate.py
src/revisor/modcobbler/: Makefile.am  Makefile.in  __init__.py
src/revisor/modcomposer/: Makefile.am  Makefile.in  __init__.py
src/revisor/moddelta/: Makefile.am  Makefile.in  __init__.py
src/revisor/modgui/: Makefile.am  Makefile.in  __init__.py  build_media.py  build_type.py  configuration.py  finished_screen.py  lm_auth.py  lm_basic.py  lm_bootloader.py  lm_display.py  lm_install_callback.py  lm_network.py  lm_security.py  lm_usercustomize.py  load_kickstart.py  package_selection.py  ready_screen.py  select_media.py  welcome_screen.py
src/revisor/modgui/glade/: base_buttons.glade  base_screen.glade  base_screen.glade.in  base_statusbar.glade  build_media.glade  build_type.glade  dialog_alert.glade  dialog_filechooser.glade  finished_buttons.glade  finished_screen.glade  lm_auth.glade  lm_basic.glade  lm_bootloader.glade  lm_display.glade  lm_network.glade  lm_security.glade  lm_usercustomize.glade  load_kickstart.glade  package_selection.glade  progress.glade  ready_screen.glade  revisor_configuration.glade  select_media.glade  select_media_advanced.glade  select_media_installation.glade  select_media_live.glade  select_media_utility.glade  select_media_virtualization.glade  welcome_buttons.glade  welcome_screen.glade
src/revisor/modhub/: Makefile.am  Makefile.in  __init__.py
src/revisor/modisolinux/: Makefile.am  Makefile.in  __init__.py
src/revisor/modjigdo/: Makefile.am  Makefile.in  __init__.py
src/revisor/modmock/: Makefile.am  Makefile.in  __init__.py
src/revisor/modrebrand/: Makefile.am  Makefile.in  __init__.py
src/revisor/modreuseinstaller/: Makefile.am  Makefile.in  __init__.py
src/revisor/modserver/: Makefile.am  Makefile.in  __init__.py
src/revisor/modvirt/: Makefile.am  Makefile.in  __init__.py
src/revisor/modwui/: Makefile.in
src/scripts/: DEVEL-buildinstall  F10-buildinstall  F11-buildinstall  F12-buildinstall  F7-buildinstall  F8-buildinstall  F9-buildinstall  Makefile.am  Makefile.in
src/unity/: Makefile.am  Makefile.in
src/unity/conf/: f10-install-everything.conf  f10-install-respin.conf  f10-install-single-cd.conf  f10-live-respin.conf  f11-install-everything.conf  f11-install-respin.conf  f11-install-single-cd-respin.conf  f11-install-single-cd.conf  f11-live-respin.conf  f12-install-everything.conf  f12-install-respin.conf  f12-install-single-cd-respin.conf  f12-install-single-cd.conf  f12-live-respin.conf  f13-install-everything.conf  f13-install-respin.conf  f13-install-single-cd-respin.conf  f13-install-single-cd.conf  f13-live-respin.conf  f7-install-respin.conf  f8-install-respin.conf  f8-install-single-cd.conf  f9-install-everything.conf  f9-install-respin.conf  f9-install-single-cd.conf  f9-live-respin.conf  fc6-install-respin.conf  rawhide-install-everything.conf  rawhide-install-respin.conf  rawhide-install-single-cd.conf  rawhide-live-respin.conf  revisor.conf
src/unity/conf/conf.d/: fedora-11-single-cd.cfg  fedora-13-everything.cfg  revisor-f10-i386-live-broffice.org-respin.conf  revisor-f10-i386-respin.conf  revisor-f10-ppc-live-electronic-lab-respin.conf  revisor-f10-ppc64-live-xfce-respin.conf  revisor-f10-x86_64-live-desktop-respin.conf  revisor-f10-x86_64-live-kde-respin.conf  revisor-f11-i386-live-desktop-respin.conf  revisor-f11-i386-respin.conf  revisor-f11-i386-single-cd-respin.conf  revisor-f11-i386-single-cd.conf  revisor-f11-ppc-live-aos-respin.conf  revisor-f11-ppc-single-cd-respin.conf  revisor-f11-ppc-single-cd.conf  revisor-f11-ppc64-live-kde-respin.conf  revisor-f11-ppc64-single-cd-respin.conf  revisor-f11-ppc64-single-cd.conf  revisor-f12-i386-respin.conf  (+50 more)
src/unity/scripts/: find_updated_packages.sh  gold_vs_respin.sh  jigdofy_everything_spin.sh  jigdofy_release.sh  jigdofy_respin.sh  jigdofy_single-cd_spin.sh  live-respin-size-diff.py  make_me_source_iso.sh  mock_build_srpm.sh  mock_respins.sh  respin.sh  sync_repo.sh  torrentify_everything_spin.sh  torrentify_respin.sh  torrentify_single-cd_spin.sh
src/unity/share/: fedora-13-single-cd_isolinux.cfg
