etcconfdir = $(sysconfdir)/revisor-unity/
etcconf_DATA = \
    conf/f12-install-everything.conf \
    conf/f12-install-respin.conf \
    conf/f12-install-single-cd.conf \
    conf/f12-install-single-cd-respin.conf \
    conf/f12-live-respin.conf \
    conf/f13-install-everything.conf \
    conf/f13-install-respin.conf \
    conf/f13-install-single-cd.conf \
    conf/f13-install-single-cd-respin.conf \
    conf/f13-live-respin.conf \
    conf/rawhide-install-everything.conf \
    conf/rawhide-install-respin.conf \
    conf/rawhide-install-single-cd.conf \
    conf/rawhide-live-respin.conf \
    conf/revisor.conf

unitydatadir = $(pkgdatadir)/unity/
unitydata_DATA = \
	share/fedora-12-single-cd_isolinux.cfg \
	share/fedora-12-respin.cfg \
	share/fedora-13-single-cd_isolinux.cfg

scriptdatadir = $(pkgdatadir)/unity/scripts/
scriptdata_DATA = \
	scripts/find_updated_packages.sh \
	scripts/gold_vs_respin.sh \
	scripts/jigdofy_respin.sh \
	scripts/jigdofy_everything_spin.sh \
	scripts/jigdofy_release.sh \
	scripts/jigdofy_single-cd_spin.sh \
	scripts/live-respin-size-diff.py \
	scripts/make_me_source_iso.sh \
	scripts/mock_build_srpm.sh \
	scripts/mock_respins.sh \
	scripts/respin.sh \
	scripts/sync_repo.sh \
	scripts/torrentify_everything_spin.sh \
	scripts/torrentify_respin.sh \
	scripts/torrentify_single-cd_spin.sh

revisorconfdir = $(sysconfdir)/revisor-unity/conf.d/
revisorconf_DATA = \
	conf/conf.d/fedora-12-everything.cfg \
	conf/conf.d/fedora-12-single-cd.cfg \
    conf/conf.d/revisor-f12-i386-respin.conf                            \
    conf/conf.d/revisor-f12-ppc64-respin.conf                           \
    conf/conf.d/revisor-f12-ppc-respin.conf                             \
    conf/conf.d/revisor-f12-x86_64-respin.conf                          \
    conf/conf.d/revisor-f12-i386-single-cd.conf   \
    conf/conf.d/revisor-f12-ppc64-single-cd.conf  \
    conf/conf.d/revisor-f12-ppc-single-cd.conf    \
    conf/conf.d/revisor-f12-x86_64-single-cd.conf \
    conf/conf.d/revisor-f12-i386-single-cd-respin.conf   \
    conf/conf.d/revisor-f12-ppc64-single-cd-respin.conf  \
    conf/conf.d/revisor-f12-ppc-single-cd-respin.conf    \
    conf/conf.d/revisor-f12-x86_64-single-cd-respin.conf \
    conf/conf.d/revisor-f12-i386-live-aos-respin.conf              \
    conf/conf.d/revisor-f12-i386-live-broffice.org-respin.conf     \
    conf/conf.d/revisor-f12-i386-live-desktop-respin.conf          \
    conf/conf.d/revisor-f12-i386-live-electronic-lab-respin.conf   \
    conf/conf.d/revisor-f12-i386-live-games-respin.conf            \
    conf/conf.d/revisor-f12-i386-live-kde-respin.conf              \
    conf/conf.d/revisor-f12-i386-live-xfce-respin.conf             \
    conf/conf.d/revisor-f12-ppc64-live-aos-respin.conf             \
    conf/conf.d/revisor-f12-ppc64-live-broffice.org-respin.conf    \
    conf/conf.d/revisor-f12-ppc64-live-desktop-respin.conf         \
    conf/conf.d/revisor-f12-ppc64-live-electronic-lab-respin.conf  \
    conf/conf.d/revisor-f12-ppc64-live-games-respin.conf           \
    conf/conf.d/revisor-f12-ppc64-live-kde-respin.conf             \
    conf/conf.d/revisor-f12-ppc64-live-xfce-respin.conf            \
    conf/conf.d/revisor-f12-ppc-live-aos-respin.conf               \
    conf/conf.d/revisor-f12-ppc-live-broffice.org-respin.conf      \
    conf/conf.d/revisor-f12-ppc-live-desktop-respin.conf           \
    conf/conf.d/revisor-f12-ppc-live-electronic-lab-respin.conf    \
    conf/conf.d/revisor-f12-ppc-live-games-respin.conf             \
    conf/conf.d/revisor-f12-ppc-live-kde-respin.conf               \
    conf/conf.d/revisor-f12-ppc-live-xfce-respin.conf              \
    conf/conf.d/revisor-f12-x86_64-live-aos-respin.conf            \
    conf/conf.d/revisor-f12-x86_64-live-broffice.org-respin.conf   \
    conf/conf.d/revisor-f12-x86_64-live-desktop-respin.conf        \
    conf/conf.d/revisor-f12-x86_64-live-electronic-lab-respin.conf \
    conf/conf.d/revisor-f12-x86_64-live-games-respin.conf          \
    conf/conf.d/revisor-f12-x86_64-live-kde-respin.conf            \
    conf/conf.d/revisor-f12-x86_64-live-xfce-respin.conf \
	conf/conf.d/fedora-13-everything.cfg \
	conf/conf.d/fedora-13-single-cd.cfg \
    conf/conf.d/revisor-f13-i386-respin.conf                            \
    conf/conf.d/revisor-f13-x86_64-respin.conf                          \
    conf/conf.d/revisor-f13-i386-single-cd.conf   \
    conf/conf.d/revisor-f13-x86_64-single-cd.conf \
    conf/conf.d/revisor-f13-i386-single-cd-respin.conf   \
    conf/conf.d/revisor-f13-x86_64-single-cd-respin.conf \
    conf/conf.d/revisor-f13-i386-live-aos-respin.conf              \
    conf/conf.d/revisor-f13-i386-live-broffice.org-respin.conf     \
    conf/conf.d/revisor-f13-i386-live-desktop-respin.conf          \
    conf/conf.d/revisor-f13-i386-live-electronic-lab-respin.conf   \
    conf/conf.d/revisor-f13-i386-live-games-respin.conf            \
    conf/conf.d/revisor-f13-i386-live-kde-respin.conf              \
    conf/conf.d/revisor-f13-i386-live-xfce-respin.conf             \
    conf/conf.d/revisor-f13-x86_64-live-aos-respin.conf            \
    conf/conf.d/revisor-f13-x86_64-live-broffice.org-respin.conf   \
    conf/conf.d/revisor-f13-x86_64-live-desktop-respin.conf        \
    conf/conf.d/revisor-f13-x86_64-live-electronic-lab-respin.conf \
    conf/conf.d/revisor-f13-x86_64-live-games-respin.conf          \
    conf/conf.d/revisor-f13-x86_64-live-kde-respin.conf            \
    conf/conf.d/revisor-f13-x86_64-live-xfce-respin.conf \
    conf/conf.d/revisor-rawhide-i386-respin.conf                            \
    conf/conf.d/revisor-rawhide-ppc64-respin.conf                           \
    conf/conf.d/revisor-rawhide-ppc-respin.conf                             \
    conf/conf.d/revisor-rawhide-x86_64-respin.conf                          \
    conf/conf.d/revisor-rawhide-i386-single-cd.conf   \
    conf/conf.d/revisor-rawhide-ppc64-single-cd.conf  \
    conf/conf.d/revisor-rawhide-ppc-single-cd.conf    \
    conf/conf.d/revisor-rawhide-x86_64-single-cd.conf \
    conf/conf.d/revisor-rawhide-i386-live-aos-respin.conf              \
    conf/conf.d/revisor-rawhide-i386-live-broffice.org-respin.conf     \
    conf/conf.d/revisor-rawhide-i386-live-desktop-respin.conf          \
    conf/conf.d/revisor-rawhide-i386-live-education-respin.conf   \
    conf/conf.d/revisor-rawhide-i386-live-electronic-lab-respin.conf   \
    conf/conf.d/revisor-rawhide-i386-live-games-respin.conf            \
    conf/conf.d/revisor-rawhide-i386-live-kde-respin.conf              \
    conf/conf.d/revisor-rawhide-i386-live-lxde-respin.conf             \
    conf/conf.d/revisor-rawhide-i386-live-xfce-respin.conf             \
    conf/conf.d/revisor-rawhide-ppc64-live-aos-respin.conf             \
    conf/conf.d/revisor-rawhide-ppc64-live-broffice.org-respin.conf    \
    conf/conf.d/revisor-rawhide-ppc64-live-desktop-respin.conf         \
    conf/conf.d/revisor-rawhide-ppc64-live-education-respin.conf  \
    conf/conf.d/revisor-rawhide-ppc64-live-electronic-lab-respin.conf  \
    conf/conf.d/revisor-rawhide-ppc64-live-games-respin.conf           \
    conf/conf.d/revisor-rawhide-ppc64-live-kde-respin.conf             \
    conf/conf.d/revisor-rawhide-ppc64-live-lxde-respin.conf            \
    conf/conf.d/revisor-rawhide-ppc64-live-xfce-respin.conf            \
    conf/conf.d/revisor-rawhide-ppc-live-aos-respin.conf               \
    conf/conf.d/revisor-rawhide-ppc-live-broffice.org-respin.conf      \
    conf/conf.d/revisor-rawhide-ppc-live-desktop-respin.conf           \
    conf/conf.d/revisor-rawhide-ppc-live-education-respin.conf    \
    conf/conf.d/revisor-rawhide-ppc-live-electronic-lab-respin.conf    \
    conf/conf.d/revisor-rawhide-ppc-live-games-respin.conf             \
    conf/conf.d/revisor-rawhide-ppc-live-kde-respin.conf               \
    conf/conf.d/revisor-rawhide-ppc-live-lxde-respin.conf              \
    conf/conf.d/revisor-rawhide-ppc-live-xfce-respin.conf              \
    conf/conf.d/revisor-rawhide-x86_64-live-aos-respin.conf            \
    conf/conf.d/revisor-rawhide-x86_64-live-broffice.org-respin.conf   \
    conf/conf.d/revisor-rawhide-x86_64-live-desktop-respin.conf        \
    conf/conf.d/revisor-rawhide-x86_64-live-education-respin.conf \
    conf/conf.d/revisor-rawhide-x86_64-live-electronic-lab-respin.conf \
    conf/conf.d/revisor-rawhide-x86_64-live-games-respin.conf          \
    conf/conf.d/revisor-rawhide-x86_64-live-kde-respin.conf            \
    conf/conf.d/revisor-rawhide-x86_64-live-lxde-respin.conf \
    conf/conf.d/revisor-rawhide-x86_64-live-xfce-respin.conf

EXTRA_DIST = \
    conf/fc6-install-respin.conf \
    conf/f7-install-respin.conf \
    conf/f8-install-respin.conf \
    conf/f8-install-single-cd.conf \
    conf/f9-install-everything.conf \
    conf/f9-install-respin.conf \
    conf/f9-install-single-cd.conf \
    conf/f9-live-respin.conf \
    conf/f10-install-everything.conf \
    conf/f10-install-respin.conf \
    conf/f10-install-single-cd.conf \
    conf/f10-live-respin.conf \
    conf/f11-install-everything.conf \
    conf/f11-install-respin.conf \
    conf/f11-install-single-cd.conf \
    conf/f11-install-single-cd-respin.conf \
    conf/f11-live-respin.conf \
    conf/conf.d/revisor-f7-i386-respin.conf      \
    conf/conf.d/revisor-f7-x86_64-respin.conf    \
    conf/conf.d/revisor-f7-ppc-respin.conf       \
    conf/conf.d/revisor-f8-i386-respin.conf                            \
    conf/conf.d/revisor-f8-ppc64-respin.conf                           \
    conf/conf.d/revisor-f8-ppc-respin.conf                             \
    conf/conf.d/revisor-f8-x86_64-respin.conf                          \
    conf/conf.d/revisor-f8-i386-single-cd.conf   \
    conf/conf.d/revisor-f8-ppc64-single-cd.conf  \
    conf/conf.d/revisor-f8-ppc-single-cd.conf    \
    conf/conf.d/revisor-f8-x86_64-single-cd.conf \
    conf/conf.d/revisor-f9-i386-respin.conf                            \
    conf/conf.d/revisor-f9-ppc64-respin.conf                           \
    conf/conf.d/revisor-f9-ppc-respin.conf                             \
    conf/conf.d/revisor-f9-x86_64-respin.conf                          \
    conf/conf.d/revisor-f9-i386-single-cd.conf   \
    conf/conf.d/revisor-f9-ppc64-single-cd.conf  \
    conf/conf.d/revisor-f9-ppc-single-cd.conf    \
    conf/conf.d/revisor-f9-x86_64-single-cd.conf \
    conf/conf.d/revisor-f9-i386-live-desktop-respin.conf               \
    conf/conf.d/revisor-f9-i386-live-developer-respin.conf             \
    conf/conf.d/revisor-f9-i386-live-education-math-respin.conf        \
    conf/conf.d/revisor-f9-i386-live-electronic-lab-respin.conf        \
    conf/conf.d/revisor-f9-i386-live-games-respin.conf                 \
    conf/conf.d/revisor-f9-i386-live-kde-respin.conf                   \
    conf/conf.d/revisor-f9-i386-live-xfce-respin.conf                  \
    conf/conf.d/revisor-f9-ppc64-live-desktop-respin.conf              \
    conf/conf.d/revisor-f9-ppc64-live-developer-respin.conf            \
    conf/conf.d/revisor-f9-ppc64-live-education-math-respin.conf       \
    conf/conf.d/revisor-f9-ppc64-live-electronic-lab-respin.conf       \
    conf/conf.d/revisor-f9-ppc64-live-games-respin.conf                \
    conf/conf.d/revisor-f9-ppc64-live-kde-respin.conf                  \
    conf/conf.d/revisor-f9-ppc64-live-xfce-respin.conf                 \
    conf/conf.d/revisor-f9-ppc-live-desktop-respin.conf                \
    conf/conf.d/revisor-f9-ppc-live-developer-respin.conf              \
    conf/conf.d/revisor-f9-ppc-live-education-math-respin.conf         \
    conf/conf.d/revisor-f9-ppc-live-electronic-lab-respin.conf         \
    conf/conf.d/revisor-f9-ppc-live-games-respin.conf                  \
    conf/conf.d/revisor-f9-ppc-live-kde-respin.conf                    \
    conf/conf.d/revisor-f9-ppc-live-xfce-respin.conf                   \
    conf/conf.d/revisor-f9-x86_64-live-desktop-respin.conf             \
    conf/conf.d/revisor-f9-x86_64-live-developer-respin.conf           \
    conf/conf.d/revisor-f9-x86_64-live-education-math-respin.conf      \
    conf/conf.d/revisor-f9-x86_64-live-electronic-lab-respin.conf      \
    conf/conf.d/revisor-f9-x86_64-live-games-respin.conf               \
    conf/conf.d/revisor-f9-x86_64-live-kde-respin.conf                 \
    conf/conf.d/revisor-f9-x86_64-live-xfce-respin.conf                \
    conf/conf.d/revisor-f10-i386-respin.conf                            \
    conf/conf.d/revisor-f10-ppc64-respin.conf                           \
    conf/conf.d/revisor-f10-ppc-respin.conf                             \
    conf/conf.d/revisor-f10-x86_64-respin.conf                          \
    conf/conf.d/revisor-f10-i386-single-cd.conf   \
    conf/conf.d/revisor-f10-ppc64-single-cd.conf  \
    conf/conf.d/revisor-f10-ppc-single-cd.conf    \
    conf/conf.d/revisor-f10-x86_64-single-cd.conf \
    conf/conf.d/revisor-f10-i386-live-aos-respin.conf               \
    conf/conf.d/revisor-f10-i386-live-broffice.org-respin.conf               \
    conf/conf.d/revisor-f10-i386-live-desktop-respin.conf               \
    conf/conf.d/revisor-f10-i386-live-developer-respin.conf             \
    conf/conf.d/revisor-f10-i386-live-education-math-respin.conf        \
    conf/conf.d/revisor-f10-i386-live-electronic-lab-respin.conf        \
    conf/conf.d/revisor-f10-i386-live-games-respin.conf                 \
    conf/conf.d/revisor-f10-i386-live-kde-respin.conf                   \
    conf/conf.d/revisor-f10-i386-live-sugar-respin.conf                   \
    conf/conf.d/revisor-f10-i386-live-xfce-respin.conf                  \
    conf/conf.d/revisor-f10-ppc64-live-aos-respin.conf               \
    conf/conf.d/revisor-f10-ppc64-live-broffice.org-respin.conf               \
    conf/conf.d/revisor-f10-ppc64-live-desktop-respin.conf              \
    conf/conf.d/revisor-f10-ppc64-live-developer-respin.conf            \
    conf/conf.d/revisor-f10-ppc64-live-education-math-respin.conf       \
    conf/conf.d/revisor-f10-ppc64-live-electronic-lab-respin.conf       \
    conf/conf.d/revisor-f10-ppc64-live-games-respin.conf                \
    conf/conf.d/revisor-f10-ppc64-live-kde-respin.conf                  \
    conf/conf.d/revisor-f10-ppc64-live-sugar-respin.conf                   \
    conf/conf.d/revisor-f10-ppc64-live-xfce-respin.conf                 \
    conf/conf.d/revisor-f10-ppc-live-aos-respin.conf               \
    conf/conf.d/revisor-f10-ppc-live-broffice.org-respin.conf               \
    conf/conf.d/revisor-f10-ppc-live-desktop-respin.conf                \
    conf/conf.d/revisor-f10-ppc-live-developer-respin.conf              \
    conf/conf.d/revisor-f10-ppc-live-education-math-respin.conf         \
    conf/conf.d/revisor-f10-ppc-live-electronic-lab-respin.conf         \
    conf/conf.d/revisor-f10-ppc-live-games-respin.conf                  \
    conf/conf.d/revisor-f10-ppc-live-kde-respin.conf                    \
    conf/conf.d/revisor-f10-ppc-live-sugar-respin.conf                   \
    conf/conf.d/revisor-f10-ppc-live-xfce-respin.conf                   \
    conf/conf.d/revisor-f10-x86_64-live-aos-respin.conf               \
    conf/conf.d/revisor-f10-x86_64-live-broffice.org-respin.conf               \
    conf/conf.d/revisor-f10-x86_64-live-desktop-respin.conf             \
    conf/conf.d/revisor-f10-x86_64-live-electronic-lab-respin.conf      \
    conf/conf.d/revisor-f10-x86_64-live-games-respin.conf               \
    conf/conf.d/revisor-f10-x86_64-live-kde-respin.conf                 \
    conf/conf.d/revisor-f10-x86_64-live-xfce-respin.conf                \
 	conf/conf.d/fedora-11-everything.cfg \
	conf/conf.d/fedora-11-single-cd.cfg \
    conf/conf.d/revisor-f11-i386-respin.conf                            \
    conf/conf.d/revisor-f11-ppc64-respin.conf                           \
    conf/conf.d/revisor-f11-ppc-respin.conf                             \
    conf/conf.d/revisor-f11-x86_64-respin.conf                          \
    conf/conf.d/revisor-f11-i386-single-cd.conf   \
    conf/conf.d/revisor-f11-ppc64-single-cd.conf  \
    conf/conf.d/revisor-f11-ppc-single-cd.conf    \
    conf/conf.d/revisor-f11-x86_64-single-cd.conf \
    conf/conf.d/revisor-f11-i386-single-cd-respin.conf   \
    conf/conf.d/revisor-f11-ppc64-single-cd-respin.conf  \
    conf/conf.d/revisor-f11-ppc-single-cd-respin.conf    \
    conf/conf.d/revisor-f11-x86_64-single-cd-respin.conf \
    conf/conf.d/revisor-f11-i386-live-aos-respin.conf              \
    conf/conf.d/revisor-f11-i386-live-broffice.org-respin.conf     \
    conf/conf.d/revisor-f11-i386-live-desktop-respin.conf          \
    conf/conf.d/revisor-f11-i386-live-electronic-lab-respin.conf   \
    conf/conf.d/revisor-f11-i386-live-games-respin.conf            \
    conf/conf.d/revisor-f11-i386-live-kde-respin.conf              \
    conf/conf.d/revisor-f11-i386-live-xfce-respin.conf             \
    conf/conf.d/revisor-f11-ppc64-live-aos-respin.conf             \
    conf/conf.d/revisor-f11-ppc64-live-broffice.org-respin.conf    \
    conf/conf.d/revisor-f11-ppc64-live-desktop-respin.conf         \
    conf/conf.d/revisor-f11-ppc64-live-electronic-lab-respin.conf  \
    conf/conf.d/revisor-f11-ppc64-live-games-respin.conf           \
    conf/conf.d/revisor-f11-ppc64-live-kde-respin.conf             \
    conf/conf.d/revisor-f11-ppc64-live-xfce-respin.conf            \
    conf/conf.d/revisor-f11-ppc-live-aos-respin.conf               \
    conf/conf.d/revisor-f11-ppc-live-broffice.org-respin.conf      \
    conf/conf.d/revisor-f11-ppc-live-desktop-respin.conf           \
    conf/conf.d/revisor-f11-ppc-live-electronic-lab-respin.conf    \
    conf/conf.d/revisor-f11-ppc-live-games-respin.conf             \
    conf/conf.d/revisor-f11-ppc-live-kde-respin.conf               \
    conf/conf.d/revisor-f11-ppc-live-xfce-respin.conf              \
    conf/conf.d/revisor-f11-x86_64-live-aos-respin.conf            \
    conf/conf.d/revisor-f11-x86_64-live-broffice.org-respin.conf   \
    conf/conf.d/revisor-f11-x86_64-live-desktop-respin.conf        \
    conf/conf.d/revisor-f11-x86_64-live-electronic-lab-respin.conf \
    conf/conf.d/revisor-f11-x86_64-live-games-respin.conf          \
    conf/conf.d/revisor-f11-x86_64-live-kde-respin.conf            \
    conf/conf.d/revisor-f11-x86_64-live-xfce-respin.conf \
    $(etcconf_DATA) \
    $(revisorconf_DATA) \
	$(unitydata_DATA) \
	$(scriptdata_DATA)
